# elgato4k-linux

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: LOW_CONFIDENCE_COMMANDS.md
src/: device.rs  error.rs  hid.rs  lib.rs  main.rs  protocol.rs  settings.rs  status.rs  uvc.rs
tests/: cli.rs
